force-app/main/default/objects/Program_Budget__c/Program_Budget__c.object-meta.xml
<CustomObject>
    <label>Program Budget</label>
    <nameField>
        <label>Program Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>