force-app/main/default/objects/Program_Budget__c/fields/Fundraised_Money__c.field-meta.xml
<CustomField>
    <fullName>Fundraised_Money__c</fullName>
    <label>Fundraised Money</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>