force-app/main/default/objects/Program_Budget__c/fields/Rest_Money__c.field-meta.xml
<CustomField>
    <fullName>Rest_Money__c</fullName>
    <formula>Fundraised_Money__c -  Distributed_Money__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rest Money</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>