force-app/main/default/objects/Program_Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fundraised_Money__c</columns>
    <columns>Distributed_Money__c</columns>
    <columns>Rest_Money__c</columns>
    <columns>Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>